--- a/app/src/main/res/menu/menu_love.xml
+++ b/app/src/main/res/menu/menu_love.xml
@@ -4,10 +4,8 @@
     >
 
     <item
-        android:id="@+id/menu_search"
-        android:orderInCategory="100"
-        android:title="搜索"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:id="@+id/menu_love"
+        android:title="收藏"
         app:showAsAction="always"
         />
 </menu>
